--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -405,7 +405,7 @@ button:hover {
     background: white;
     padding: 20px;
     border-radius: 10px;
-    width: 70%;
+    width: 40%;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
@@ -414,7 +414,17 @@ button:hover {
     transform: translateY(-10px);
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
 }
-
+@media screen and (max-width: 768px) {
+.service-container{  display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+    .service-box{
+        background: white;
+    padding: 20px;
+    border-radius: 10px;
+        width:80%;
+}
 
 /* Featured-organizations */
 #featured-organizations {
